deploy/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hermes-api
  labels:
    app.kubernetes.io/name: hermes
    app.kubernetes.io/part-of: heliantheon
spec:
  ingressClassName: traefik
  rules:
    - host: hermes.heliannuuthus.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: hermes
                port:
                  name: http
